Finish prep for Orc Diplomacy

--- a/source/adventures/orc_diplomacy.html.slim
+++ b/source/adventures/orc_diplomacy.html.slim
@@ -138,4 +138,33 @@ p
   | Ulam will not admit to this first reason. If the party brings him around on the second, though, Agrigoth will whisper to him, and then he suggests that, while the white eagle tribe alone cannot stand against the hobgoblins, there may be a way the tribe can help. He tells the PCs that there was once a great warchief who led the tribes united in battle agains the elves. Recently, he says, the tomb of this warchief was rediscovered in the Fanthaennen mountains. If the PCs are willing to journey there and recover the warchief's headdress, Ulam believes he can use it to unite the tribes once again, in which case he will agree to ally with Rathbaran against the goblinoids. Without a promise to retrieve the headdress, Ulam is unwilling to form an alliance.
 
 p
-  | Thargra should realize that traveling to the mountains would entail passing through wallbreaker tribe territory.
+  | Thargra should realize that traveling to the mountains would entail passing through wallbreaker tribe territory. The party has a choice; they can minimize the time spent in wallbreaker territory by staying south of the wall as far as they can, or they can take the more direct route on the north side of the wall (saving a day's worth of travel out of 5). The forer will take them to the keep at the end of the wall, and allow them to spend less time in the wallbreaker territory, thereby avoiding the encounter with Polg.
+p
+  | The two routes converge in the foothills. It will be two more days of travel through the mountains to the mirror of heaven &mdash; if the PCs can learn its exact location, which Lokhan and the white eagle tribe don't know. The wallbreakers do, however, for the foothills of the mountains are wallbreaker territory. Thargra doesn't know the location of the mirror, but she believes her tribal elders might.
+
+h3 Wallbreaker
+p
+  | If the party chooses the northern, more direct route, along the way they encounter Thargra's sister Polg leading a raiding party toward the wall. Polg challenges Thargra about her involvement with the non-orcs, and why she fled like a coward. She challenges Thargra to tell her why she shouldn't just strike her down as a weak-willed traitor to her people. Thargra might be persuaded to let Thargra pass by an appeal to their mother, otherwise, she challenges Thargra to a duel to the death, which Thargra is not likely to survive without support from her party. Polg attempts to grapple & shove Thargra, pinning her helplessly, before beating her with the flat of her axe. If Thargra is clearly outmatched and begs for mercy, Polg may stop short of killing her, and demand that she turn around and leave and never return.
+
+h3 The Keep at the End of the Wall
+p
+  | The foothills of the Fanthaennen mountains are four days journey east. One day further on, the party would reach a large inlet from the sea, where the wall ends. A keep once stood there, with a high tower, which has since toppled into the sea. The coast is rocky and difficult to traverse. Aerlanc is south of here, along the coast. The mountains loom on the north side of the inlet, and to the northeast.
+
+p
+  | The keep was a simple four-story tower with two outbuildings and a defensive wall, anchored to the end of the great wall. Gatehouses on the north and south walls provided a way to pass through, and ballista platforms overlook the northwest and northeast. It was built on the edge of a 30-foot cliff overlooking a narrow beach (virtually covered at high tide, quite wide at low tide), but the cliff face itself has fallen away in part, the tower has collapsed, leaving a great pile of rubble on the beach below. The wallbreaker orcs avoid this place, telling their children stories of monsters from the sea. But there are no valuables remaining in the keep.
+
+p
+  | One point of interest in the keep, in an inside corner of one of the outbuildings, is a faded painting low on the wall resembling the image on Cyr's amulet -- a ship against a setting sun. A DC 10 Intelligence (Investigation) check reveals a nearby secret door, which conceals a stair down to a tiny, underground, windowless room. Inside that room, discarded on the floor, is a simple ring made of green-tinted gold, set with a single aquamarine stone. The ring is worth 500 gp just as a piece of jewelry, but it is also a
+  span.magic< ring of swimming
+  |.
+
+p
+  | If the PCs investigate the rubble below, they are attacked by
+  span.emph<> merrow
+  | lurking in the shallows.
+p
+  | If they rest here overnight, instead they are paid a visit by the coven of hags, curious about these fearless interlopers. They have information and treasure for trade, if the party can offer them what they consider a fair bargain. Their treasure includes the 100 gp pearl (which they'll happily take from their merrow servants), a
+  span.magic< staff of flowers
+  |, information about the location, history, and nature of the
+  span.magic< headdress of the warchief
+  |, or information about the symbol on Cyr's amulet. They don't know too much about this, but they know that it was once a sign of resistance against the empire, used by halflings to mark places of refuge where escaped slaves were hidden.
