--- a/source/worksheets/magic_items.html.slim
+++ b/source/worksheets/magic_items.html.slim
@@ -2,12 +2,12 @@
 title: Magic Items
 public: false
 ---
-section.flex.tall
+section.flex.tall.one-sided
   = partial('partials/magic_item', locals: { item: data.items.stumblefoot_amulet })
   = partial('partials/magic_item', locals: { item: data.items.rod_of_fire_absorption })
   = partial('partials/magic_item', locals: { item: data.items.headdress_of_the_warchief })
-
-section.flex.tall
   = partial('partials/magic_item', locals: { item: data.items.hewards_handy_haversack })
   = partial('partials/magic_item', locals: { item: data.items.quaals_feather_token_fan })
   = partial('partials/magic_item', locals: { item: data.items.potion_of_greater_healing })
+  = partial('partials/magic_item', locals: { item: data.items.staff_of_flowers })
+  = partial('partials/magic_item', locals: { item: data.items.ring_of_swimming })
