--- a/source/encounters/orc_diplomacy.html.slim
+++ b/source/encounters/orc_diplomacy.html.slim
@@ -65,11 +65,31 @@ polg:
   creatures:
     polg: 1
     orc_hunter: 1
-    orc_bloodhound: 2
+    orc_skirmisher: 3
   question:
     - How will Thargra and her sister react to each other?
   motivation:
     - Polg hates that Thargra has joined the militia and prefers to kill her for honor. Polg will not yield to her sister willingly. She may be swayed by a request for mercy.
+
+hag_coven:
+  creatures:
+    sea_hag: 3
+  question:
+    - Do the PCs have anything to bargain for the knowledge they seek?
+  motivation:
+    - The sea hags are too powerful for the party as a coven, and they know it (see MM p. 176). They know the location and nature of the <span class="magic">headdress of the warchief</span>, and would potentially exchange it for something else of value.
+  treasure:
+    - The hags also possess as <span class="magic">staff of flowers</span>.
+
+merrow:
+  creatures:
+    merrow: 3
+  question:
+    - Can the PCs escape the merrow ambush in the fallen tower?
+  motivation:
+    - The merrow seek to harpoon a character and drag them into the sea. If they succeed, or drop to 1/3 of their hp, they will retreat. They won't pursue far if the characters retreat on land.
+  treasure:
+    - The merrow possess a pink pearl worth 100 gp.
 ---
 = partial('partials/encounter_worksheet', locals: { encounter: current_page.data.meeting_with_the_white_eagle })
 = partial('partials/encounter_worksheet', locals: { encounter: current_page.data.orc_hunters })
@@ -78,3 +98,5 @@ polg:
 = partial('partials/encounter_worksheet', locals: { encounter: current_page.data.goblin_ambush })
 = partial('partials/encounter_worksheet', locals: { encounter: current_page.data.corrupted_water_spirits })
 = partial('partials/encounter_worksheet', locals: { encounter: current_page.data.polg })
+= partial('partials/encounter_worksheet', locals: { encounter: current_page.data.merrow })
+= partial('partials/encounter_worksheet', locals: { encounter: current_page.data.hag_coven })
