--- a/source/worksheets/magic_items.html.slim
+++ b/source/worksheets/magic_items.html.slim
@@ -11,3 +11,4 @@ section.flex.tall.one-sided
   = partial('partials/magic_item', locals: { item: data.items.potion_of_greater_healing })
   = partial('partials/magic_item', locals: { item: data.items.staff_of_flowers })
   = partial('partials/magic_item', locals: { item: data.items.ring_of_swimming })
+  = partial('partials/magic_item', locals: { item: data.items.vorastrixiv })
