Add some magic items

--- a/source/religion.html.slim
+++ b/source/religion.html.slim
@@ -71,7 +71,7 @@ section
       tr
         td Veinunth
         td copper
-        td Language, art, craft, language, music, creativity
+        td Language, art, craft, music, creativity
         td Forge, Knowledge
       tr
         td Orthonax
