--- a/source/worksheets/magic_items.html.slim
+++ b/source/worksheets/magic_items.html.slim
@@ -12,3 +12,4 @@ section.flex.tall.one-sided
   = partial('partials/magic_item', locals: { item: data.items.staff_of_flowers })
   = partial('partials/magic_item', locals: { item: data.items.ring_of_swimming })
   = partial('partials/magic_item', locals: { item: data.items.vorastrixiv })
+  = partial('partials/magic_item', locals: { item: data.items.mallorn_harp })
