--- a/source/worksheets/magic_items.html.slim
+++ b/source/worksheets/magic_items.html.slim
@@ -2,7 +2,7 @@
 title: Magic Items
 public: false
 ---
-section.flex.tall.one-sided
+section.flex.tall.one-sided.cards
   = partial('partials/magic_item', locals: { item: data.items.stumblefoot_amulet })
   = partial('partials/magic_item', locals: { item: data.items.rod_of_fire_absorption })
   = partial('partials/magic_item', locals: { item: data.items.headdress_of_the_warchief })
