--- a/source/religion.html.slim
+++ b/source/religion.html.slim
@@ -2,107 +2,118 @@
 title: Religion
 public: true
 ---
-section
-  h3 = current_page.data.title
-  .blockquote
-    p Boldwe&#451; Boldwe&#451; The light of Fegonuzan cannot outshine the fires of creation, nor the wind erode your spirit. The waters turn to stone with your breath. Turn not your back on your children in exile, and spare us from the enemy.
-    .attribution &mdash; Traditional dwarvish prayer
+h2 = current_page.data.title
+.blockquote
+  p Boldwe&#451; Boldwe&#451; The light of Fegonuzan cannot outshine the fires of creation, nor the wind erode your spirit. The waters turn to stone with your breath. Turn not your back on your children in exile, and spare us from the enemy.
+  .attribution &mdash; Traditional dwarvish prayer
 
-  p There is no pantheon of gods agreed to exist by all the civilizations of Nuvenel. Nevertheless, there are many sources of divine power, and even in cultures without established religious institutions clerics and other divine servants are not uncommon. Cults and false messiahs are common as well, even when their leaders do not possess any special claim to divinity.
+p There is no pantheon of gods agreed to exist by all the civilizations of Nuvenel. Nevertheless, there are many sources of divine power, and even in cultures without established religious institutions clerics and other divine servants are not uncommon. Cults and false messiahs are common as well, even when their leaders do not possess any special claim to divinity.
 
-  p The closest thing Nuvenel possesses to a pantheon of deities are the dragon ancestors worshipped in the state religion of the Zhusan Empire. During the empire's expansion, temples to these ancestors were established across the continent. Today, few non-dragonborn actively participate in the worship of the dragon ancestors, but all know of them, and clerics, sorcerers, or warlocks who claim to draw power from them are not uncommon.
+p The closest thing Nuvenel possesses to a pantheon of deities are the dragon ancestors worshipped in the state religion of the Zhusan Empire. During the empire's expansion, temples to these ancestors were established across the continent. Today, few non-dragonborn actively participate in the worship of the dragon ancestors, but all know of them, and clerics, sorcerers, or warlocks who claim to draw power from them are not uncommon.
 
-  p The Religions of Nuvenel table shows a non-exhaustive sample of faiths that cleric player characters may belong to, as well as suggested domains for each. The dragon ancestors are covered in the Dragon Ancestors of the Zhusan Empire table. Individual faiths are discussed in more detail below.
+p The Religions of Nuvenel table shows a non-exhaustive sample of faiths that cleric player characters may belong to, as well as suggested domains for each. The dragon ancestors are covered in the Dragon Ancestors of the Zhusan Empire table. Individual faiths are discussed in more detail below.
 
-  table
-    caption Religions of Nuvenel
-    thead
-      tr
-        th Faith
-        th Typical Practitioners
-        th Suggested Domains
-        th Common Symbol
-    tbody
-      tr
-        td Boldwe, the fire of creation
-        td Dwarves of the mountainhomes
-        td Forge, Life, Light, War
-        td A fiery red orb
+table
+  caption Religions of Nuvenel
+  thead
+    tr
+      th Faith
+      th Typical Practitioners
+      th Suggested Domains
+      th Common Symbol
+  tbody
+    tr
+      td Boldwe, the fire of creation
+      td Dwarves of the mountainhomes
+      td Forge, Life, Light, War
+      td A fiery red orb
+    tr
+      td Serratos, the pit lord
+      td Yuan-ti in the Sorenthai
+      td Knowledge, Trickery, War
+      td A colorful serpent
 
-  table
-    caption Dragon Ancestors of the Zhusan Empire
-    thead
-      tr
-        th Ancestor
-        th Draconic Color
-        th Province
-        th Suggested Domains
-    tbody
-      tr
-        td Jaldrynth
-        td gold
-        td Life &amp; death, time, the seasons
-        td Life, Grave
-      tr
-        td Ythyrra
-        td red
-        td Fire, mountains, civilization, creation &amp; destruction
-        td Light, Forge, Order
-      tr
-        td Pendrani
-        td silver
-        td Stars &amp; the heavens, non-draconic races
-        td Knowledge, Life, Light
-      tr
-        td Uldrayr
-        td blue
-        td Storm, wind, magic
-        td Arcana, Tempest
-      tr
-        td Numeol
-        td bronze
-        td Water, the sea, navigation
-        td Knowledge, Tempest
-      tr
-        td Shassyr
-        td green
-        td Plants, wilderness, survival, endurance, secrets
-        td Life, Nature, Trickery
-      tr
-        td Veinunth
-        td copper
-        td Language, art, craft, music, creativity
-        td Forge, Knowledge
-      tr
-        td Orthonax
-        td black
-        td Tyranny, war, darkness, night
-        td Order, Trickery, War
-      tr
-        td Mienneid
-        td brass
-        td Fortune, birth, hearth
-        td Life, Light, Trickery
-      tr
-        td Ceozet
-        td white
-        td Hunting, strength, beasts
-        td Nature, War
+table
+  caption Dragon Ancestors of the Zhusan Empire
+  thead
+    tr
+      th Ancestor
+      th Draconic Color
+      th Province
+      th Suggested Domains
+  tbody
+    tr
+      td Jaldrynth
+      td gold
+      td Life &amp; death, time, the seasons
+      td Life, Grave
+    tr
+      td Ythyrra
+      td red
+      td Fire, mountains, civilization, creation &amp; destruction
+      td Light, Forge, Order
+    tr
+      td Pendrani
+      td silver
+      td Stars &amp; the heavens, non-draconic races
+      td Knowledge, Peace, Twilight
+    tr
+      td Uldrayr
+      td blue
+      td Storm, wind, magic
+      td Arcana, Tempest
+    tr
+      td Numeol
+      td bronze
+      td Water, the sea, navigation
+      td Knowledge, Tempest
+    tr
+      td Shassyr
+      td green
+      td Plants, wilderness, survival, endurance, secrets
+      td Life, Nature, Trickery
+    tr
+      td Veinunth
+      td copper
+      td Language, art, craft, music, creativity
+      td Forge, Knowledge
+    tr
+      td Orthonax
+      td black
+      td Tyranny, war, darkness, night
+      td Order, Trickery, Twilight, War
+    tr
+      td Mienneid
+      td brass
+      td Fortune, birth, hearth
+      td Life, Light, Peace, Trickery
+    tr
+      td Ceozet
+      td white
+      td Hunting, strength, beasts
+      td Nature, War
 
-  h4 Revered Dragon Ancestors
-  p In the founding days of the Zhusan Empire, the dragonborn clans each revered an ancient dragon they regarded as an ancestor. The death of Jaldrynth the gold brought the clans together, and Jaldrynth remained a revered figure and a source of power for his clan even in death.
+h4 Revered Dragon Ancestors
+p In the founding days of the Zhusan Empire, the dragonborn clans each revered an ancient dragon they regarded as an ancestor. The death of Jaldrynth the gold brought the clans together, and Jaldrynth remained a revered figure and a source of power for his clan even in death.
 
-  p Contact with the elves of Aerlanc deeply influenced the culture and learning of Zhus. Although the elves did not worship gods, their spiritual practices involved appreciation of aspects of the natural world and its creatures. The Zhusan conception of their revered ancestors changed to incorporate these aspects. In part, these spheres of influence came to determine the expected roles of the clans &mdash; the bronze clan produced sailors and naval officers, while the blue clan were known for their skilled enchanters and fearsome battle-sorcerers, for example.
+p Contact with the elves of Aerlanc deeply influenced the culture and learning of Zhus. Although the elves did not worship gods, their spiritual practices involved appreciation of aspects of the natural world and its creatures. The Zhusan conception of their revered ancestors changed to incorporate these aspects. In part, these spheres of influence came to determine the expected roles of the clans &mdash; the bronze clan produced sailors and naval officers, while the blue clan were known for their skilled enchanters and fearsome battle-sorcerers, for example.
 
-  p Over time, some of these ancestors played important roles in the history of the empire. Most notably, Orthonax the black was the dictator of Zhus for a period lasting nearly a century. As their stories evolved, so to did the Zhusan conception of their ancestors. Orthonax is now more strongly associated with tyranny, war, and conquest than with his more natural aspects (Orthonax had long been associated with darkness and night).
+p Over time, some of these ancestors played important roles in the history of the empire. Most notably, Orthonax the black was the dictator of Zhus for a period lasting several centuries. As their stories evolved, so to did the Zhusan conception of their ancestors. Orthonax is now more strongly associated with tyranny, war, and conquest than with his more natural aspects (Orthonax had long been associated with darkness and night).
 
-  p Eventually, before the fall of the Zhusan Empire, all of the revered ancestors perished or passed from mortal knowledge. The Zhusan dragonborn kept their memory alive and codified worship of the ten revered ancestors as a state religion. For a time, all other religious practices were outlawed in the empire.
+p Eventually, before the fall of the Zhusan Empire, all of the revered ancestors perished or passed from mortal knowledge. The Zhusan dragonborn kept their memory alive and codified worship of the ten revered ancestors as a state religion. For a time, all other religious practices were outlawed in the empire.
 
-  p Today, the state religion of Zhus no longer exists as an institution, but the Zhusan revered ancestors have not been forgotten, and many of their temples still stand as monuments to the past. Most who live within the former borders of the ancient empire still call on them for blessings or to curse their enemies, though few expect results. Many of those who wield divine magic attribute it to one of the revered ancestors, even as others say the ancestors have passed from the world and no longer influence events. It is not uncommon for a charismatic individual wielding healing magic to attract a cult following and claim to be the prophet or even the reincarnation of one of these ancestors.
+p Today, the state religion of Zhus no longer exists as an institution, but the Zhusan revered ancestors have not been forgotten, and many of their temples still stand as monuments to the past. Most who live within the former borders of the ancient empire still call on them for blessings or to curse their enemies, though few expect results. Many of those who wield divine magic attribute it to one of the revered ancestors, even as others say the ancestors have passed from the world and no longer influence events. It is not uncommon for a charismatic individual wielding healing magic to attract a cult following and claim to be the prophet or even the reincarnation of one of these ancestors.
 
-  h4 Boldwe, God of Dwarves
-  p The dwarves of the mountainhomes practice a monotheistic faith in which Boldwe, the fire of creation, is the sole divinity. They do not deny the existence of other powerful, otherworldly beings, but in dwarven theology these are not true gods, and their power cannot compare to that of Boldwe.
+h4 Boldwe, God of Dwarves
+p The dwarves of the mountainhomes practice a monotheistic faith in which Boldwe, the fire of creation, is the sole divinity. They do not deny the existence of other powerful, otherworldly beings, but in dwarven theology these are not true gods, and their power cannot compare to that of Boldwe.
 
-  p The dwarven creation myth has it that the world began as a great flame, representing the power of Boldwe the creator in the mortal realm. Other powerful beings, jealous of Boldwe's beauty, tried to dim the flame. First, by creating a great void of darkness to disperse the fire, into which some of Boldwe's power dissipated. But Boldwe created for himself a shell of earth, to contain and shape the fire and to seal out the void. Next, the enemy created air and water, to erode the earth and snuff Boldwe's flame once they penetrated the shell. From these creations, the mountains and the seas were born. But Boldwe created metal and stone which the air and water could not penetrate. Finally, the enemy created goblins and other foul creatures to delve into the earth in search of these metals. So Boldwe created the dwarves out of his own fire to defend his creation against the destroyers.
+p The dwarven creation myth has it that the world began as a great flame, representing the power of Boldwe the creator in the mortal realm. Other powerful beings, jealous of Boldwe's beauty, tried to dim the flame. First, by creating a great void of darkness to disperse the fire, into which some of Boldwe's power dissipated. But Boldwe created for himself a shell of earth, to contain and shape the fire and to seal out the void. Next, the enemy created air and water, to erode the earth and snuff Boldwe's flame once they penetrated the shell. From these creations, the mountains and the seas were born. But Boldwe created metal and stone which the air and water could not penetrate. Finally, the enemy created goblins and other foul creatures to delve into the earth in search of these metals. So Boldwe created the dwarves out of his own fire to defend his creation against the destroyers.
 
-  p But the dwarves found themselves in love with the metals and stone Boldwe had created, and they too wished to possess and shape them. So Boldwe cast them out of the fire and cursed them with needing air and water to live, like the goblins. And he sent them to the surface to do battle there with the enemy, and to shape the stone and metal as they would.
+p But the dwarves found themselves in love with the metals and stone Boldwe had created, and they too wished to possess and shape them. So Boldwe cast them out of the fire and cursed them with needing air and water to live, like the goblins. And he sent them to the surface to do battle there with the enemy, and to shape the stone and metal as they would.
+
+h4 Serratos, Pit Lord of the Yuan-ti
+p Deep in the Sorenthai jungle, an ancient yuan-ti civilization had at its heart an endless pit that extends deep into the earth. These yuan-ti believed that Serratos, the Pit Lord, dwells at the bottom of the pit, from which he occasionally sends his messengers: colorful serpents known as pit vipers, which deliver mystical visions from the Pit Lord by biting the intended recipient. Their venom has hallucinogenic properties, at least in yuan-ti. To other creatures, it can be more dangerous.
+
+p At one time, these messages were frequent, and the followers of Serratos believed that their destiny was to rule over all other mortals. Long before the Zhusan Empire arrived in the Sorenthai, a yuan-ti kingdom dominated the Sorenthai, subjugating (and often sacrificing to their god) tabaxi, lizardfolk, tortles, and others native to the jungle. Over time, their power waned, and the visions of Serratos became less and less common, until they all were all but a legend.
+
+p Although Serratos has fallen silent, there are still denizens of the Sorenthai that believe he will one day awaken again. The great pit still yawns in the midst of the jungle, its dark depths unplumbed by mortals. Many yuan-ti in the jungle still practice a form of Serratos worship. Today, though, the faith is a clandestine one. The ancient spectacle of public sacrifice faded with the might of the ancient yuan-ti kingdom, and few of the citizens of Shassyr know the name Serratos, despite that city's proximity to the pit in which he is said to reside.
