Add Geography section & revise Vorastrixiv

--- a/source/organizations.html.slim
+++ b/source/organizations.html.slim
@@ -22,7 +22,7 @@ table
       td Network of halflings who smuggled slaves to freedom. Developed a martial art known as "sway".
       td Reign of Orthonax
     tr
-      td Order of the Crucible of Veinunth
+      td Crucible of Veinunth
       td Developed a secret method of crafting steel that gave the Zhusan Empire an early military advantage.
       td Early Zhusan Empire
 
